--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
